--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
   "name": "node-starter",
   "private": true,
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22",
+    "browser-sync": "^2.29.3"
   }
 }
