--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "node-starter",
-  "private": true,
-  "main": "index.js",
+  "name": "my-express-project",
+  "version": "1.0.0",
+  "description": "An Express project with BrowserSync for development",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js --ignore public/",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "serve-static": "^1.14.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22",
     "browser-sync": "^2.29.3"
-  }
+  },
+  "engines": {
+    "node": ">=14.0.0",
+    "npm": ">=6.0.0"
+  },
+  "author": "Your Name",
+  "license": "ISC"
 }
