--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
-  "name": "my-express-project",
+  "name": "learning-front-end",
   "version": "1.0.0",
-  "description": "An Express project with BrowserSync for development",
-  "main": "server.js",
+  "description": "php learning",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js --ignore public/",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "servor public --reload"
   },
-  "dependencies": {
-    "express": "^4.17.1",
-    "serve-static": "^1.14.1"
+  "keywords": [
+    "html",
+    "css",
+    "javascript",
+    "learning",
+    "live-preview"
+  ],
+  "author": "Your Name", 
+  "license": "ISC",
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bcrhbrhcdb/learning-pho-p.git"
   },
+  "bugs": {
+    "url": "https://github.com/bcrhbrhcdb/learning-pho-p/issues"
+  },
+  "homepage": "https://github.com/bcrhbrhcdb/learning-pho-p#readme",
   "devDependencies": {
-    "nodemon": "^2.0.22",
-    "browser-sync": "^2.29.3"
-  },
-  "engines": {
-    "node": ">=14.0.0",
-    "npm": ">=6.0.0"
-  },
-  "author": "Your Name",
-  "license": "ISC"
+    "servor": "^4.0.2"
+  }
 }
