--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "PHP learning project",
   "scripts": {
-    "start": "nodemon server.js",  
+    "start": "node server.js",  
     "dev": "nodemon server.js"      
   },
   "keywords": [
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/bcrhbrhcdb/learning-pho-p#readme",
   "devDependencies": {
     "express": "^4.17.1",  
+    "php-express": "^0.0.3",  
     "nodemon": "^2.0.15"    
   }
 }
