--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "PHP learning project",
   "scripts": {
-    "start": "node server.js",  
-    "dev": "nodemon server.js"      
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "html",
@@ -13,9 +13,8 @@
     "learning",
     "live-preview"
   ],
-  "author": "Your Name", 
+  "author": "Your Name",
   "license": "ISC",
-  "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/bcrhbrhcdb/learning-pho-p.git"
@@ -25,8 +24,11 @@
   },
   "homepage": "https://github.com/bcrhbrhcdb/learning-pho-p#readme",
   "devDependencies": {
-    "express": "^4.17.1",  
-    "php-express": "^0.0.3",  
-    "nodemon": "^2.0.15"    
+    "express": "^4.17.1",
+    "nodemon": "^2.0.15",
+    "php-express": "^0.0.3"
+  },
+  "dependencies": {
+    "vercel": "^37.5.3"
   }
 }
